@@ -9,35 +9,46 @@ $VERSION = eval $VERSION;
 
 use if $ENV{MCCS_DEVELOPMENT}, "lib", "lib/";
 
-use Getopt::Long;
+use Getopt::Long qw(:config no_ignore_case no_auto_abbrev pass_through);
 use Plack::App::MCCS;
 use Plack::Runner;
+use Pod::Usage;
 
-my $defaults = {};
-
-# first, parse our own options
-Getopt::Long::Configure qw/no_ignore_case no_auto_abbrev pass_through/;
-Getopt::Long::GetOptions(
-    'no-minify'   => \$defaults->{no_minify},
-    'no-compress' => \$defaults->{no_compress},
-    'no-etag'     => \$defaults->{no_etag}
+my $man  = 0;
+my $help = 0;
+my %opts = (
+    minify   => 1,
+    compress => 1,
+    etag     => 1,
 );
+
+GetOptions(
+    'help|h'    => \$help,
+    'man'       => \$man,
+    'minify!'   => \$opts{minify},
+    'compress!' => \$opts{compress},
+    'etag!'     => \$opts{etag}
+) or pod2usage(2);
+
+if ($help) {
+    pod2usage(1);
+    exit 0;
+} elsif ($man) {
+    pod2usage( -exitval => 0, -verbose => 2 );
+    exit 0;
+}
 
 # now let Plack::Runner parse plackup options
 my $runner = Plack::Runner->new();
 $runner->parse_options(@ARGV);
 
 # after this, the root directory should be in $runner->{argv}
-my $root = $runner->{argv}->[0] || './';
-print "Serving files from $root\n";
+if ( scalar @{ $runner->{argv} } > 0 ) {
+    $opts{root} = $runner->{argv}->[0];
+}
 
 # create the Plack::App::MCCS app and start running it
-my %options = ( root => $root );
-foreach (qw/minify compress etag/) {
-    $options{defaults}->{$_} = 0
-      if $defaults->{"no_$_"};
-}
-$runner->run( Plack::App::MCCS->new(%options)->to_app );
+$runner->run( Plack::App::MCCS->new(%opts)->to_app );
 
 __END__
 =head1 NAME
@@ -46,14 +57,14 @@ mccs - Fully-featured static file server.
 
 =head1 SYNOPSIS
 
-	# serve current working directory over HTTP, port 5000
+    # serve current working directory over HTTP, port 5000
     $ mccs
 
-	# serve a directory on port 80 using Starman
-	$ mccs -s Starman --listen :80 /some/directory
+    # serve a directory on port 80 using Starman
+    $ mccs -s Starman --listen :80 /some/directory
 
-	# serve without minification, compression, or etag creation
-	$ mccs --no-minify --no-compress --no-etag
+    # serve without minification, compression, or etag creation
+    $ mccs --nominify --nocompress --noetag
 
 =head1 DESCRIPTION
 
